--- a/public/_assets/scss/components/_card.scss
+++ b/public/_assets/scss/components/_card.scss
@@ -7,9 +7,7 @@
     flex-direction: column;
     gap: var(--spacing-100);
 
-    // min-height: 0;
-    // min-width: 0;
-    overflow-x: hidden;
+    min-height: 0;
 
     &__body {
         display: flex;
@@ -17,9 +15,6 @@
         align-items: center;
         flex-direction: column;
         gap: var(--spacing-100);
-
-        // min-height: 0;
-        // min-width: 0;
 
         padding-bottom: var(--spacing-100);
         border-top: none;
